samples/_failures_safe/1761724872_6ac427_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdf0f278.c: In function ‘main’:
./samples/SAFE/__tmp_bdf0f278.c:161:28: error: missing terminating " character
  161 |                     printf("\nMultiplication Result
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bdf0f278.c:161:21: error: expected expression at end of input
  161 |                     printf("\nMultiplication Result
      |                     ^~~~~~
./samples/SAFE/__tmp_bdf0f278.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdf0f278.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdf0f278.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdf0f278.c:161:21: error: expected declaration or statement at end of input
